--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section class="history">
                 <h3>Історія видатків</h3>
                 <ul class="history__list">
-                    <li class="history__item history__item-plus">Зарплата
+                    <!-- <li class="history__item history__item-plus">Зарплата
                         <span class="history__money">+30000 грн</span>
                         <button class="history_delete">x</button>
                     </li>
@@ -51,7 +51,7 @@
                     <li class="history__item  history__item-minus">Борг
                         <span class="history__money">-10000 грн</span>
                         <button class="history_delete">x</button>
-                    </li>
+                    </li> -->
                 </ul>
             </section>
 
@@ -70,7 +70,7 @@
             </section>
         </div>
     </main>
-
+   <script src="script/script.js"></script>
 </body>
 
 </html>
